Side Bar labels become Project Explorer

--- a/pkg/nuclide-source-control-side-bar/package.json
+++ b/pkg/nuclide-source-control-side-bar/package.json
@@ -9,7 +9,7 @@
     "configMetadata": {
       "pathComponents": [
         "Source Control",
-        "Sidebar"
+        "Project Explorer"
       ]
     },
     "config": {
