--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -1,3 +1,6 @@
 zertosh:
   full_name: Andres Suarez
   fbid: 18700343
+matthewwithanm:
+  full_name: Matthew Dapena-Tretter
+  fbid: 100002839212206
