--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -2,6 +2,10 @@
   href: /docs/
   category: docs
 
+- title: Blog
+  href: /blog/
+  category: blog
+
 - title: Support
   href: /support/
   category: support
