Add flow autocomplete setting for completing functions without calling parens
Summary:
In JS it's common to want to just refer to a function by name, but our autocompleter always creates a
snippet that appends parens and arguments, assuming the user wants to call a function.  This adds a setting
that toggles this behavior, and doesn't change the default.

Reviewed By: nmote

Differential Revision: D4636490

fbshipit-source-id: aa7f7d7c664b3b2c903439f73c1fd0a3ef6ca2c8

--- a/pkg/nuclide-flow/package.json
+++ b/pkg/nuclide-flow/package.json
@@ -66,6 +66,12 @@
         "type": "boolean",
         "default": false,
         "description": "EXPERIMENTAL: This feature is in very early development. Restart required for this setting to take effect."
+      },
+      "functionSnippetShouldIncludeArguments": {
+        "title": "Autocompleted function snippets will include calling parens and arguments.",
+        "type": "boolean",
+        "default": true,
+        "description": "If unchecked, functions will autocomplete as only their name, and not include their calling parens and arguments."
       }
     },
     "packageType": "Atom",
