(De)serialize UI Playground Gadget
Summary:
- Makes it faster to iterate on UI components in the playground
- Serves as a demonstration for how to serialize workspace items

Reviewed By: vjeux

Differential Revision: D4641017

fbshipit-source-id: ef762706c13d1f5be7e815872b494650b04aafac

--- a/pkg/sample-ui-playground/package.json
+++ b/pkg/sample-ui-playground/package.json
@@ -5,6 +5,9 @@
   "version": "0.0.0",
   "description": "Various examples of how to use generic UI components.",
   "atomTestRunner": "../../lib/test-runner-entry.js",
+  "deserializers": {
+    "nuclide.SampleUiPlayground": "deserializeSampleUiPlayground"
+  },
   "nuclide": {
     "packageType": "Atom",
     "testRunner": "apm"
