--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "strip-ansi": "3.0.1",
     "symbol-observable": "1.0.4",
     "temp": "0.8.3",
+    "through": "2.3.8",
     "urlregexp": "1.0.2",
     "uuid": "3.0.1",
     "v8-compile-cache": "1.0.0",
