--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react": "15.3.1",
     "react-devtools-core": "2.0.8",
     "react-dom": "15.3.1",
+    "react-virtualized": "9.1.0",
     "redux": "3.6.0",
     "request": "2.79.0",
     "resolve-from": "2.0.0",
