Prevent circleci caching of eslint-plugin-nuclide-internal
Summary: CircleCI caches `node_modules` (https://circleci.com/docs/1.0/how-cache-works/). We want to keep this, but force a re-install of the custom lint rules, to catch updates.

Reviewed By: hansonw

Differential Revision: D4767445

fbshipit-source-id: 6818a90ce6e8731733b49abc3b073a7e26d2bd03

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,11 @@ machine:
   node:
     version: 6.5.0
 
+dependencies:
+  pre:
+    # Force a reinstall of the lint rules.
+    - rm -rf node_modules/eslint-plugin-nuclide-internal
+
 test:
   override:
     # Do not run tests for releases.
