--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "glob": "7.1.1",
     "graphql": "0.7.2",
     "heap": "0.2.6",
+    "idx": "1.2.0",
     "immutable": "3.7.6",
     "ini": "1.3.4",
     "jest-editor-support": "19.0.2",
@@ -104,6 +105,7 @@
     "babel-core": "6.24.0",
     "babel-eslint": "7.1.1",
     "babel-generator": "6.24.0",
+    "babel-plugin-idx": "1.1.0",
     "babel-plugin-transform-async-to-module-method": "6.22.0",
     "babel-plugin-transform-class-properties": "6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.23.0",
