Bundle MagicPython by default
Summary:
MagicPython is almost universally better than the default `language-python`.
However, until https://github.com/atom/atom/pull/13877 gets resolved, let's bundle it with Nuclide.

Reviewed By: mostafaeweda

Differential Revision: D4797843

fbshipit-source-id: e0d6e0a26bfc7b4548d394e269c7515e451bde40

--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "language-ocaml",
     "language-swift",
     "language-thrift",
+    "MagicPython",
     "merge-conflicts",
     "nuclide-format-js",
     "set-syntax",
