Use nuclide-prebuilt-libs instead of ctags-prebuilt and fuzzy-native
Summary: `ctags` and `fuzzy-native` are now building out of one repo: https://github.com/facebooknuclide/nuclide-prebuilt-libs. This diff removes the checked-in versions in favor of the npm package.

Reviewed By: hansonw

Differential Revision: D4815952

fbshipit-source-id: 1db0a67679a1a447b7f14bbb83ee2079e3422bae

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mkdirp": "0.5.1",
     "mv": "2.1.1",
     "node-fetch": "1.6.3",
+    "nuclide-prebuilt-libs": "0.0.5",
     "nullthrows": "1.0.0",
     "plist": "2.0.1",
     "react": "15.3.1",
