--- a/pkg/nuclide-adb-sdb-rpc/package.json
+++ b/pkg/nuclide-adb-sdb-rpc/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nuclide-adb-rpc",
+  "name": "nuclide-adb-sdb-rpc",
   "repository": "https://github.com/facebook/nuclide",
-  "main": "./lib/AdbService.js",
+  "main": "./lib/DebugBridgeService.js",
   "version": "0.0.0",
-  "description": "Adb service",
+  "description": "Debug bridge rpc for adb and sdb",
   "nuclide": {
     "packageType": "Node",
     "testRunner": "npm"
