--- a/pkg/nuclide-adb-sdb-rpc/package.json
+++ b/pkg/nuclide-adb-sdb-rpc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuclide-adb-sdb-rpc",
   "repository": "https://github.com/facebook/nuclide",
-  "main": "./lib/DebugBridgeService.js",
+  "main": "./lib/main.js",
   "version": "0.0.0",
   "description": "Debug bridge rpc for adb and sdb",
   "nuclide": {
