--- a/pkg/nuclide-devices/package.json
+++ b/pkg/nuclide-devices/package.json
@@ -11,6 +11,9 @@
   },
   "activationCommands": {
   },
+  "deserializers": {
+    "nuclide.DevicePanelState": "deserializeDevicePanelState"
+  },
   "consumedServices": {
     "nuclide.workspace-views": {
       "versions": {
