--- a/pkg/nuclide-clang/package.json
+++ b/pkg/nuclide-clang/package.json
@@ -50,6 +50,7 @@
   },
   "activationHooks": [
     "language-c:grammar-used",
+    "language-cpp14:grammar-used",
     "language-objective-c:grammar-used"
   ],
   "consumedServices": {
